kubernetes/service/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-service
  namespace: syse
  labels:
    app: user-service

spec:
  replicas: 1
  template:
    metadata:
      name: user-service
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: registry.projectdw.de/syse-usermanager
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "0.3"
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred

  selector:
    matchLabels:
      app: user-service

---
apiVersion: v1
kind: Service
metadata:
  name: user-connector-service
  namespace: syse
spec:
  selector:
    app: user-service
  ports:
    - port: 8080
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graphql-playground-userconnector
  namespace: syse
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"

    #nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  tls:
    - hosts:
        - syse-backend.projectdw.de
      secretName: https-syse-backend-service
  rules:
    - host: syse-backend.projectdw.de
      http:
        paths:
          - backend:
              service:
                name: user-connector-service
                port:
                  number: 8080
            path: "/"
            pathType: "ImplementationSpecific"
