kubernetes/service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graphql-playground-userconnector
  namespace: syse
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-syse-prod"

    #nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  tls:
    - hosts:
        - syse-backend.projectdw.de
      secretName: https-syse-backend-service
  rules:
    - host: syse-backend.projectdw.de
      http:
        paths:
          - backend:
              service:
                name: user-connector-service
                port:
                  number: 8080
            path: "/"
            pathType: "ImplementationSpecific"
